--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,12 +1,11 @@
 footer {
     background: #f1f1f1;
     width: 100%;
-    padding: 1rem;
+    padding: 0.5rem;
     color: #999;
     position: absolute;
-    /* bottom: 0; */
-    width: 100%;
-    /* height: 2.5rem;   */
+    bottom: 0;
+    width: 100%;  
     text-align: center;
     vertical-align: bottom;
   }
